<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="11dp"
    android:orientation="vertical"
    tools:context="adaz.urbantick_ibratec.ConsultaActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtCategoria"
        android:layout_marginTop="15dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/categorias"
        android:id="@+id/editCategoria"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtSubCategoria"
        android:layout_marginTop="15dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/subcategorias"
        android:id="@+id/editSubCategoria"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtEstado"
        android:layout_marginTop="15dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/uf"
        android:id="@+id/editUf"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtCidade"
        android:layout_marginTop="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editCidade"/>

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="#1b1b1b"
        android:text="@string/txtBuscar"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:onClick="buscarFornecedor"/>

</LinearLayout>
