<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="11dp"
    android:orientation="vertical"
    tools:context="adaz.urbantick_ibratec.Gui.MainActivity">
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:src="@mipmap/urbantick_trasnp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtEmail"
        android:layout_marginTop="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editEmail"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtSenha"
        android:layout_marginTop="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editSenha"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="#1b1b1b"
        android:text="@string/txtEntrar"
        android:textColor="#FFFFFF"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarMain"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <!--
    <TextView
        android:id="@+id/txtEsqueceuSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ESQUECEU A SENHA?"
        android:layout_weight="0.20"
        android:layout_gravity="center"/>
    -->

</LinearLayout>
